Fix content shifting on modals
woof

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -99,6 +99,10 @@
   padding-top: 1px;
 }
 
+html:not(.modal-is-open) {
+  scrollbar-gutter: stable;
+}
+
 #count, .editImgThumb, .editAltBlock {
   display: inline-block;
 }
